--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,14 @@
 body {
     font-family: 'Lato', sans-serif;
 }
+
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
