--- a/src/components/Style/Swiper/popularCategories.css
+++ b/src/components/Style/Swiper/popularCategories.css
@@ -4,14 +4,14 @@
   }
   
   .swiper-slide {
-    /* text-align: center; */
+    text-align: center;
     font-size: 18px;
     background: #fff;
   
     /* Center slide text vertically */
     display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
+    justify-content: center;
+    align-items: center;
   }
   
   .swiper-slide img {
